// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.updateArtifacts() catches errors 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "mix.lock",
      "stderr": "not found",
    },
  },
]
`;

exports[`.updateArtifacts() returns null if unchanged 1`] = `
Array [
  Object {
    "cmd": "mix deps.update plug",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
    },
  },
]
`;

exports[`.updateArtifacts() returns updated mix.lock 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New mix.lock",
      "name": "mix.lock",
    },
  },
]
`;

exports[`.updateArtifacts() returns updated mix.lock 2`] = `
Array [
  Object {
    "cmd": "docker run --rm -v /tmp/github/some/repo:/tmp/github/some/repo -w /tmp/github/some/repo renovate/mix mix deps.update plug",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
    },
  },
]
`;
